INT-21475 theme_snap: Fixed styling for Weeks format to avoid overlapping the higlighted week over its section name

--- a/scss/_brandcolor.scss
+++ b/scss/_brandcolor.scss
@@ -1186,6 +1186,12 @@ $custom-menu-text-color: rgb(255, 255, 255) !default; // Need to define this wit
                 opacity: 1;
             }
         }
+
+        .courseindex-section.current > .pageitem {
+          .courseindex-link {
+            padding: 2px 6.2em 2px 5px
+          }
+        }
     }
 
     .atto_morefontcolors_button > .dropdown-menu > li > a {
